<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#933C9B"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="167dp"
                android:layout_height="119dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dip"
                app:srcCompat="@drawable/zakat"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="42dp"
                tools:srcCompat="@drawable/zakat"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dip"
                android:text="@string/app_name"
                android:textColor="#F1E1E1"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="700dp"
                android:layout_marginBottom="32dip"
                android:text="@string/copyright"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="28dip"
                android:layout_marginTop="58dp"
                android:layout_marginRight="28dip"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textColor="#F4F0F0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/dev_info"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                android:layout_marginRight="16dip"
                android:text="@string/dev_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="8dip"
                android:layout_marginRight="16dip"
                android:text="@string/dev_group"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="8dip"
                android:layout_marginRight="16dip"
                android:text="@string/dev_matricno"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="8dip"
                android:layout_marginRight="16dip"
                android:text="@string/dev_code"
                android:textColor="@color/black" />
            
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:layout_centerHorizontal="true"
                android:text="@string/link" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
